--------------------------------------

Package org.springframework.aop
* introduced ProxyConfig base class for ProxyFactoryBean etc, specifying common AOP proxy settings
* introduced before advice, in addition to interception around advice
* replaced InvokerInterceptor and ProxyInterceptor interface by TargetSource interface

Package org.springframework.beans
* dissolved event propagation support in BeanWrapper and DataBinder
* introduced AutowireCapableBeanFactory interface, allowing for autowiring of externally managed bean instances
* dissolved PropertyValuesProviderFactoryBean interface and AbstractFactoryBean convenience base class
* fixed ManagedList and ManagedMap resolution for prototypes in AbstractBeanFactory
* fixed potential multithreading issue on nested prototype resolution in AbstractBeanFactory
* dependent beans (with corresponding "depends-on") are destroyed first in AbstractBeanFactory's "destroySingletons"
* consider arrays of primitive wrappers as "simple" properties in the sense of dependency-check="simple"
* factored out bean definition format reading logic into Properties/Xml/JdbcBeanDefinitionReader
* dissolved bean definition reading methods in DefaultListableBeanFactory, reduced them in XmlBeanFactory
* added "preInstantiateSingletons" method to ConfigurableListableBeanFactory interface
* allow for "list" and "map" as sub-element of "list" in XML bean definitions
* added "default-lazy-init" attribute for XML bean definitions
* added two "beanOfType" convenience methods to BeanFactoryUtils

Package org.springframework.context
* ApplicationContext interface extends AutowireCapableBeanFactory
* dissolved ContextOptions support
* fixed "lazy-init" support in AbstractApplicationContext, delegating to the factory's "preInstantiateSingletons"
* added support for pseudo URL prefix "classpath:" in AbstractApplicationContext's "getResourceAsStream"

Package org.springframework.jdbc