@@ -21,12 +21,23 @@
 
 	<bean id="rod4" class="org.springframework.beans.factory.xml.DerivedConstructorDependenciesBean"
 		autowire="constructor">
-		<constructor-arg><ref bean="kerry2"/></constructor-arg>
+		<constructor-arg>
+			<description>wife</description>
+			<ref bean="kerry2"/>
+		</constructor-arg>
 	</bean>
 
 	<bean id="rod5" class="org.springframework.beans.factory.xml.DerivedConstructorDependenciesBean">
-		<constructor-arg index="1"><ref bean="kerry1"/></constructor-arg>
-		<constructor-arg index="3"><value>99</value></constructor-arg>
+		<constructor-arg index="1">
+			<description>wife</description>
+			<ref bean="kerry1"/>
+		</constructor-arg>
+		<constructor-arg index="3">
+			<description>
+				magic int value: 99 is the number of aliens who can dance on the tip of pin
+			</description>
+			<value>99</value>
+		</constructor-arg>
 		<constructor-arg><ref bean="other"/></constructor-arg>
 		<constructor-arg index="4"><value>myname</value></constructor-arg>
 		<constructor-arg index="0"><ref bean="kerry2"/></constructor-arg>
